--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    overflow: hidden;
+}
+
 .table-container{
     display: flex;
     justify-content: center;
@@ -11,12 +15,19 @@
     gap: 30px;
 }
 
-.table-container >*{
+.table-container > *{
     flex-basis: 220px;
+    flex-shrink: 0;   
     padding: 20px;
     /* adding font */
-    font-family: "Patrick Hand", cursive;
+    
+    /* font-family: "Patrick Hand", cursive;
     font-weight: 400;
+    font-style: normal; */
+
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
     font-style: normal;
 }
 
@@ -25,13 +36,14 @@
 .table-content-header{
     color: #fff;
     padding: 10px;
+    min-height: 110px;
     border-radius: 30px 30px 0px 0px;
     -webkit-border-radius: 30px 30px 0px 0px;
     -moz-border-radius: 30px 30px 0px 0px;
 }
 
 .table-content-header > h1{
-    font-size: 2rem;
+    font-size: 1.5rem;
     text-align: center;
     text-decoration: underline;
     text-underline-offset: 10px;
