added media query for less than 650px width

--- a/style.css
+++ b/style.css
@@ -197,3 +197,17 @@ button.button-buy:focus {
 button.button-buy:active {
     transform: translateY(0.25em)
 }
+
+@media (max-width: 650px) {
+    body{
+        overflow-y: scroll;
+    }
+    .table-container{
+        flex-direction: column;
+        align-items: center;
+    }
+    .table-container > *{
+        max-width: 400px;
+    }
+
+}
